changes in DetailsFile

--- a/Views/Salaries/Index.cshtml
+++ b/Views/Salaries/Index.cshtml
@@ -19,7 +19,7 @@
                 <h2>PayBand</h2>
             </th>
             <th>
-                <h2>PayBandSalary</h2>
+                <h2>NetSalary</h2>
             </th>
             <th></th>
         </tr>
