Change in IndexFile

--- a/Views/Salaries/Index.cshtml
+++ b/Views/Salaries/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.BasicSalary)
             </th>
             <th>
-                <h2>PayBand</h2>
+                <h2>PayBand()</h2>
             </th>
             <th>
                 <h2>NetSalary</h2>
